@@ -1,3 +1,13 @@
+2005-11-07  Vincent Noel <vnoel@cox.net>
+
+	* log_repaint.c: (logview_show_model):
+	* logrtns.c: (log_open):
+	* logrtns.h:
+	* logview-findbar.c: (iter_is_visible), (logview_findbar_clear),
+	(logview_findbar_entry_changed_cb), (logview_findbar_new):
+	Change how the filter works : don't clear filter on focus-out, add
+	a "Clear" button.
+
 2005-11-04  Vincent Noel <vnoel@cox.net>
 
 	* log_repaint.c: (model_fill_date_iter):
